# datadandic

./: LICENSE  README.md  pyproject.toml
datadantic/: __init__.py  exceptions.py  operators.py
