[tool.poetry]
name = "datadantic"
version = "0.1.1"
description = "Pydantic base models for Google Datastore"
authors = ["Maximiliano Curia <maximiliano.curia@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maxyz/datadantic"
packages = [
    {include="datadantic", from="."}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^1.8.2"
google-cloud-datastore = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pytest = "^6.0.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
